[package]
name = "cep"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Common encryption protocols"
homepage = "https://github.com/4831c0/cep"
repository = "https://github.com/4831c0/cep"
readme = "README.md"

[dependencies]
aes-gcm = "0.10.3"
libcrux-ml-kem = { version = "0.0.3", features = ["std", "simd256", "mlkem512", "mlkem768", "mlkem1024"] }
rand = "0.9.2"
x25519-dalek = "3.0.0-pre.1"
