[package]
name = "cep"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Common encryption protocols"
homepage = "https://github.com/4831c0/cep"
repository = "https://github.com/4831c0/cep"
readme = "README.md"

[dependencies]
aes-gcm = "0.10.3"
libcrux-ml-kem = { version = "0.0.3", features = ["std", "simd256", "mlkem512", "mlkem768", "mlkem1024"] }
rand = "0.9.2"
x25519-dalek = "3.0.0-pre.1"
uniffi = { version = "0.29.3", features = [ "cli" ] }
thiserror = "2.0.17"

[build-dependencies]
uniffi = { version = "0.29.3", features = [ "build" ] }

[lib]
crate-type = ["cdylib"]
name = "cep"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
